# ardrone2_dem_filter

./: CMakeLists.txt  LICENSE  README.md  ardrone2FlightData.mat  ardrone2ImuGyroNoiseBeforeIHResult.mat  ardrone2_dem_filter.repos  ardroneImuNoiseTest.mat  bagdata_15-09-2020_15-05.mat  calcEqPwm.m  checkARDrone2Angles.m  checkARDrone2AnglesExp7_24_3.mat  checkARDroneInitialAngles.m  checkARDroneInitialAnglesIH_1.mat  checkARDroneInitialAnglesIH_RPY_1.mat  checkOptitrackAngles.m  checkOptitrackAnglesExp7_24_3.mat  compARDrone2OptiTrackData.mat  compARDrone2OptitrackData.m  countDups.m  countDupsTest.m  createFlightplans.m  deriveSmoothnessFromPrecisionP2S5e-3.mat  determineVxs.m  eqPwmCalcAndCheck.m  eqThrustCalc.m  eqThrustEindhovenCoef.m  estimateMeasNoiseCharacteristics.m  estimateNoiseCharacteristics.m  estimateNoises.m  estimateProcessNoiseCharacteristics.m  f_finitediffmat.m  findStartEndIdx.m  fixDups.m  fixDupsTest.m  gaussianFilterValidity.m  gazSim.mat  getContPerf.m  getCov3x3.m  getCov7x7.m  getExpData.m  (+40 more)
config/: Ardrone2FlightParams.yaml
demCode/: DEM_observer.m  D_step_causes.m  GenCoordResults.mat  NoGenCoordResults.mat  NoGenOutputResults.mat  SSE_0-6_0-6_1e-3-1.5e-2.mat  SSE_0-6_0-6_1e-3-1e-1.mat  SSE_0-6_0-6_5e-3-1.5e-1.mat  SSE_0-6_0-6_5e-3-2e-2.mat  SSE_wind2_tFrame2_0-6_0-6_1e-3-1e-3-1.5e-2.mat  SSE_wind2_tFrame3_0-6_0-6_1e-3-1e-3-1.5e-2.mat  SSE_wind2_tFrame4_cTEs2_determine_s.mat  UIO_estimator.m  ardrone2FlightData5_UZeroed.mat  ardrone2FlightData6.mat  ardrone2FlightData7_15-11-2020_15-17.mat  ardrone2FlightData7_wind2_tFrame1_yPhi_hPhiDot.mat  (+10 more)
(+154 files in other folders)
